--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ default: &default
   username: root
   password:
   host: localhost
-  socket: /opt/lampp/var/mysql/mysql.sock #sacar al ponerlo online
+  #socket: /opt/lampp/var/mysql/mysql.sock ubicacion del socket
 
 development:
   <<: *default
